tests/ui/cir_deps.fail.stderr
error: circular dependency detected: x -> y -> x
 --> tests/ui/cir_deps.fail.rs:7:5
  |
7 |     #[depends_on(x)]
  |     ^^^^^^^^^^^^^^^^
